--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 node_modules/
+
+# password
+default.json
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
