--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
 node_modules/
 
+/client/build
+
 # password
 default.json
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
